Deleted accents from english strings file and fixed OperationsScreen text display errors

--- a/android/assets/i18n/strings.properties
+++ b/android/assets/i18n/strings.properties
@@ -32,16 +32,16 @@ action_licenses=Licenses
 notices=Notices
 close=Close
 about_illustrations_sara=Illustrations by Sara Mayo
-about_sounds_martin=Recordings by Martín Arias Pérez
+about_sounds_martin=Recordings by Martin Arias Perez
 about_illustrations_email=smayolago@gmail.com
 about_based_on=Based on the decks created by
-juan_pedro=Juan Pedro Sánchez Márquez,
+juan_pedro=Juan Pedro Sanchez Marquez,
 teacher_and_child_psychologist=teacher and child psychologist
 about_barajas_web=http://www.barajasdecalculo.com
 operation=Operation
 result=Result
 level=Level
-thanks_sergio=Sergio Artidiello González\ntesting and feedback
+thanks_sergio=Sergio Artidiello Gonzalez\ntesting and feedback
 acknowledgements=Acknowledgements
 about_email=ferjogames@gmail.com
 ifyouwanttoplaysound=sound/default/ifyouwanttoplay.mp3
