Added privacy policy link to about dialog

--- a/desktop/i18n/strings_es.properties
+++ b/desktop/i18n/strings_es.properties
@@ -44,3 +44,5 @@ acknowledgements=Agradecimientos
 ifyouwanttoplaysound=sound/es/ifyouwanttoplay.mp3
 whatsyournamesound=sound/es/whatsyourname.mp3
 letsplaysound=sound/es/letsplay.mp3
+privacy_policy=Pol\u00EDtica de privacidad
+privacy_policy_url=https://ferjogames.blogspot.com/2022/02/baraja-sistema-coral-politica-de.html
