Add privacy policy strings

--- a/android/assets/i18n/strings.properties
+++ b/android/assets/i18n/strings.properties
@@ -48,3 +48,5 @@ ifyouwanttoplaysound=sound/default/ifyouwanttoplay.mp3
 whatsyournamesound=sound/default/whatsyourname.mp3
 letsplaysound=sound/default/letsplay.mp3
 version=1.2.7
+privacy_policy=Privacy policy
+privacy_policy_url=https://ferjogames.blogspot.com/2019/08/coral-system-deck-privacy-policy.html
